Lego Editor Change Log
2013/03/?? - 0.56
  *  <DB COMPATIBILITY BREAKAGE> Updated to the latest (and final?) version of the schema.  
		This change makes it impossible to read database created with older editors.  Must export 
		the Legos using the previously installed version, and re-import.
  *  Added missing "Drop as Units" option to Timing and Measurement for drag and drop operations. 
  *  Fixed a null pointer that could happen on drag and drop from the SCT Tree View.
  *  Tweaked the sort order of the lego to move the comment to the top.
  *  Cleaned up the the consistency of interval notation vs set notation for displays of 
  		bounds and intervals.
  *  artf227498 Change snomed concept drop down boxes to not show the SCTID, also reworked the 
  		concept filter option to not show the ID.
  *  artf227501 Add an option to expand all nodes recursively on each node in both trees.
  *  artf227426 Added an (optional) summary view to the editor tab

2013/03/01 - 0.55
  *  Improve error handling when snomed DB is missing.
  *  Fixed deadlock that could happen if you typed in the snomed ID filter field before the Snomed
  		DB was initialized.
  *  Properly background thread the snomed filter / search option so it can't hang the entire GUI.
  *  Fixed a null pointer that could happen if you brought up an editor tab before the commonly used 
  		concepts finished intializing.
  *  Fixed a validator error with Relationship Groups.
  *  Allow pendingConcept parents to be other pending concepts.
  *  Stopped losing the LegoList tree expand/collapse state when adding or removing items from it.
  *  artf227108 Add Install4j installer script.
  *  artf227106 Add Undo/Redo support to Lego Editor tabs.

2013/02/26 - 0.54
  *  Fix a silly mistake that lead to problems with template delete in some cases.
  *  artf227107 Add XHTML export option.  Rework existing XML export to have a proper dialog